--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
                     </button>
                 </div>
     </section>
+    <section style="text-align: center;">
+        <h6>Salman Ahmed ©️ 2020 All right recived</h6>
+    </section>
 </body>
 </html>
