--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="half-width" id="top">
             <h2>Biography</h2> <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sed nobis facere soluta culpa provident, amet ex esse autem consequatur, praesentium dolorum rem dolorem quis perferendis. Quisquam ut, dolorum eveniet maiores soluta adipisci tenetur voluptatem laudantium magni explicabo. Eveniet, quas!</p> <br>
-            <a target="_blank" class="btn" href="https://www.facebook.com/salman.1237">DOWNLOAD CV</a>
+            <a target="_blank" class="btn" href="https://www.facebook.com/salman.ahmed1237/">DOWNLOAD CV</a>
         </div>
     </section>
     <section class="work">
